# deltakit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  licenses.confluence  mypy.ini  pixi.toml  pyproject.toml  ruff.toml  setup.cfg  snippet.py  surface_code_demo.ipynb
deltakit-circuit/: README.md  pyproject.toml  ruff.toml
deltakit-circuit/src/deltakit_circuit/: __init__.py  _basic_maps.py  _basic_types.py  _circuit.py  _detector_manipulation.py  _gate_layer.py  _noise_factory.py  _noise_layer.py  _parse_stim.py  _qubit_identifiers.py  _qubit_mapping.py  _stim_identifiers.py  _version.pyi
deltakit-circuit/src/deltakit_circuit/_annotations/: _detector.py  _observable.py  _shift_coordinates.py
deltakit-circuit/src/deltakit_circuit/gates/: __init__.py  _abstract_gates.py  _measurement_gates.py  _one_qubit_gates.py  _reset_gates.py  _two_qubit_gates.py
deltakit-circuit/src/deltakit_circuit/noise_channels/: __init__.py  _abstract_noise_channels.py  _correlated_noise.py  _depolarising_noise.py  _leakage_noise.py  _pauli_noise.py
deltakit-circuit/tests/: conftest.py  test_basic_types.py  test_circuit.py  test_circuit_copy.py  test_deltakit_circuit.py  test_detector_manipulation.py  test_gate_layer.py  test_noise_factory.py  test_noise_layer.py  test_qubit_identifiers.py  test_qubit_mapping.py  test_stim_interface.py  test_stim_mappings.py
deltakit-circuit/tests/test_annotations/: test_detector.py  test_observable.py  test_shift_coordinates.py
deltakit-circuit/tests/test_gates/: test_measurement_gates.py  test_one_qubit_gates.py  test_reset_gates.py  test_two_qubit_gates.py
deltakit-circuit/tests/test_noise_channels/: test_correlated_noise.py  test_depolarising_noise.py  test_leakage_noise.py  test_pauli_noise.py
deltakit-circuit/tests/test_stim_parsing/: test_coordinate_parsing.py  test_full_circuit_parsing.py  test_gate_parsing.py  test_helper_methods.py  test_noise_parsing.py  test_parsing_annotations.py  test_repeat_block_parsing.py
deltakit-core/: README.md  pyproject.toml  ruff.toml
deltakit-core/src/deltakit_core/: __init__.py  constants.py
deltakit-core/src/deltakit_core/api/: _decorators.py  _logging.py  constants.py  environment.py  paths.py
deltakit-core/src/deltakit_core/data_formats/: __init__.py  _b801_parsers.py  _converter.py  _data_analysis.py  _measurements.py
deltakit-core/src/deltakit_core/decoding_graphs/: __init__.py  _data_qubits.py  _decoding_graph.py  _decoding_graph_tools.py  _dem_parsing.py  _explained_dem_parsing.py  _hypergraph_decomposition.py  _syndromes.py  _weighted_graphs.py
deltakit-core/src/deltakit_core/types/: __init__.py  _data_string.py  _exceptions.py  _experiment_types.py  _types.py
deltakit-core/tests/: conftest.py
deltakit-core/tests/helpers/: __init__.py  utils.py
deltakit-core/tests/unit/api/: test_decorators.py
deltakit-core/tests/unit/data_formats/: test_b8_parser.py  test_data_analysis.py  test_measurements.py
deltakit-core/tests/unit/decoding_graphs/: test_data_qubits.py  test_decoding_graph_tools.py  test_decoding_hyper_multigraph.py  test_decoding_hypergraph.py  test_dem_parsing.py  test_detector_records.py  test_explained_dem_parsing.py  test_hypergraph_decomposition.py  test_nx_decoding_graphs.py  test_parsing_dem_to_graphs.py  test_syndromes.py  test_weighted_graphs.py
deltakit-core/tests/unit/server/: test_api_client.py  test_api_v2_client.py  test_gql_client.py  test_token.py
deltakit-core/tests/unit/types/: test_binary_data_type.py  test_converter.py  test_data_string.py  test_decoding_result.py  test_experiment_types.py  test_types.py
deltakit-decode/: LICENSE  README.md  pyproject.toml  ruff.toml
deltakit-decode/src/deltakit_decode/: __init__.py  _abstract_matching_decoders.py  _base_reporter.py  _mwpm_decoder.py
deltakit-decode/src/deltakit_decode/analysis/: __init__.py  _decoder_manager.py  _decoding_circuits.py  _empirical_decoding_error_distribution.py  _matching_decoder_managers.py  _run_all_analysis_engine.py
deltakit-decode/src/deltakit_decode/noise_sources/: __init__.py  _generic_noise_sources.py  _matching_noise_sources.py  _stim_noise_sources.py
deltakit-decode/src/deltakit_decode/utils/: __init__.py  _decoding_graph_visualiser.py  _derivation_tools.py  _derivation_tools_pij.py  _graph_circuit_helpers.py  _log_utils.py  _pij_visualiser.py
deltakit-decode/tests/: conftest.py
deltakit-decode/tests/analysis/: test_empirical_decoding_error_distribution.py  test_matching_decoder_managers.py  test_run_all_analysis_engine.py  test_timing_reporter.py
deltakit-decode/tests/noise_sources/: test_noise_sources_error_generator.py  test_stim_noise_sources.py
deltakit-decode/tests/unit/: README.md
deltakit-decode/tests/unit/utils/: test_decoding_graph_visualiser.py  test_derivation_tools.py  (+4 more)
deltakit-explorer/: README.md  conftest.py  pyproject.toml  ruff.toml  tox.ini
deltakit-explorer/src/deltakit_explorer/: __init__.py  _cloud_decoders.py
deltakit-explorer/tests/: conftest.py  test_client.py
deltakit-explorer/tests/analysis/: test_analysis.py
deltakit-explorer/tests/circuit_generation/: test_circuit_generation.py
deltakit-explorer/tests/decoding/: test_cloud_decoder.py
deltakit-explorer/tests/logging/: test_logging.py
deltakit-explorer/tests/resources/: rep_code_mutated_default_noise_data.stim  rep_code_noisy_stim_dets.01
deltakit-explorer/tests/server/: test_api_client.py  test_api_v2_client.py  test_gql_client.py  test_token.py
deltakit-explorer/tests/simulation/: test_simulation.py  test_simulation_branching.py
deltakit-explorer/tests/types/: test_binary_data_type.py  test_converter.py  test_data_string.py  test_decoding_result.py  test_experiment_types.py  test_types.py
deltakit-explorer/tests/unit/: test_stabiliser.py
deltakit-explorer/tests/utils/: test_auth.py  test_config_file.py  test_data_analysis.py  test_decorators.py  test_utils.py
deltakit-explorer/tests/visualisation/: test_visualisation.py
docs/: api.rst  (+4 more)
(+265 files in other folders)
