[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-core"
version = "0.5.0"
description = "Deltakit (component deltakit-core)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26, <3.0",
  "networkx>=3.1, <4.0",
  "stim>=1.12.1, <2.0",
  "typing_extensions>=4.0, <5.0",
]

[project.urls]
Homepage = "https://github.com/riverlane/deltakit"
"Bug Tracker" = "https://github.com/riverlane/deltakit/issues"
Changelog = "https://github.com/riverlane/deltakit/releases"

[tool.deptry.per_rule_ignores]
DEP001 = ['lestim']
DEP002 = ['types-networkx']  # needed to appease mypy
DEP003 = ['deltakit_core']
