[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-decode"
version = "0.5.1"
description = "Deltakit (component deltakit-decode)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26, <3.0",
  "networkx>=3.1, <4.0",
  "seaborn>=0.12.0, <1.0",
  "matplotlib>=3.5.2, <4.0",
  "nbformat>=4.2, <6.0",
  "plotly>=5.10, <7.0",
  "pymatching>=2.0, <3.0",
  "stim>=1.12.1, <2.0",
  "pathos >= 0.3.4",
  "pandas >= 2.0",
  "typing_extensions>=4.0, <5.0",
  "types-networkx",
  "types-requests",
  "types-tqdm",
  "typing-extensions",
  "tqdm >=4.66.2",
  "pandas-stubs",
  "plotly-stubs",
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[tool.deptry.per_rule_ignores]
DEP002 = ['types-networkx', 'types-requests', 'types-seaborn', 'types-tqdm']  # needed to appease mypy
DEP003 = ['deltakit_decode']
