[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-explorer"
version = "0.5.1"
description = "Deltakit (component deltakit-explorer)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "gql >=3.5.0",
    "graphql_core >=3.2.0",
    "numpy >=1.26",
    "stim >=1.9.0",
    "matplotlib >=3.5.2",
    "requests >=2.32.0",
    "seaborn >=0.12.0",
    "tqdm >=4.66.2",
    "typing-extensions >=4.0.0",
    "requests_toolbelt >=1.0.0",  # needed by gql, which doesn't automatically install it
    "pymatching >= 2.2.2",
    "galois >= 0.4.6",
    "bposd >= 2.1",
    "pandas >= 2.0",
    "pandas-stubs",
    "types-seaborn",
    "scipy-stubs",
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"
